# carsim

./: README.md  env  pyproject.toml
src/: custom_agent.py  ego_agent.py  follow_ego_vehicle.py  receiver.py  short_rollout.py  spawn_traffic.py  test.py  weather_machine.py  world.py
src/db/: schema.sql
src/utils/: callback.py  remove_all_vehicles.py
src/utils/messages/: gnss.py  ground_truth.py  imu.py
